--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -81,5 +81,53 @@
    <hr>
    <p>Custom Pipe</p>
    {{ aLongText | summary:393 }}
+   <hr>
+   <h3>Form with validation</h3>
+   <form novalidate #f="ngForm" (ngSubmit)="onSubmitForm(f)">
+      <div class="form-group">
+         <label>Name:</label>
+         <input type="text" 
+         class="form-control"
+         [(ngModel)]="user.name"
+         name="name"
+         #userName="ngModel"
+         minlength="2"
+         required
+         >
+         <div *ngIf="userName.errors?.required && userName.touched" 
+            class="alert alert-danger">Name is required!
+         </div>
+         <div *ngIf="userName.errors?.minlength && userName.touched" 
+            class="alert alert-danger">Name should be at least 2 characters!
+         </div>
+      </div>
+      <div class="form-group">
+         <label>Email:</label>
+         <input type="text" 
+         class="form-control"
+         [(ngModel)]="user.email"
+         name="emal"
+         #userEmail="ngModel"
+         required
+         >
+         <div *ngIf="userEmail.errors?.required && userEmail.touched" 
+         class="alert alert-danger">Email is required!
+      </div>
+   </div>
+   <div class="form-group">
+      <label>Phone:</label>
+      <input type="text" 
+      class="form-control"
+      [(ngModel)]="user.phone"
+      name="phone"
+      #userPhone="ngModel"
+      minlength="10"
+      >
+      <div *ngIf="userPhone.errors?.minlength && userEmail.touched" 
+      class="alert alert-danger">Enter a valid number!
+   </div>
+      </div>
+      <input type="submit" class="btn btn-success" value="Submit">
+   </form>
 
 </div>
