--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -4,10 +4,12 @@
 
    <div class="row">
       <div class="form-group col">
-         <form (submit)="onSubmit()">
-            <label for="">Todo List:</label>
-            <input [(ngModel)]="todo" name="name" type="text" class="form-control">
-            <input type="submit" value="Add!" class="btn btn-success mb-0">
+         <form novalidate #form="ngForm" (ngSubmit)="onSubmit(form)">
+            <label>Todo List:</label>
+            <input type="text" class="form-control" name="todo" [(ngModel)]="todo" #todoItem="ngModel" minlength="3" required>
+            <p *ngIf="todoItem.errors?.minlength && todoItem.touched" class="text-danger">Todo too short!
+            </p>
+            <input type="submit" value="Add!" class="btn btn-success mb-0" [class.disabled]="todoItem.errors?.minlength || todoItem.errors?.required">
          </form>
       </div>
       <ul class="list-group col">
@@ -86,46 +88,23 @@
    <form novalidate #f="ngForm" (ngSubmit)="onSubmitForm(f)">
       <div class="form-group">
          <label>Name:</label>
-         <input type="text" 
-         class="form-control"
-         [(ngModel)]="user.name"
-         name="name"
-         #userName="ngModel"
-         minlength="2"
-         required
-         >
-         <div *ngIf="userName.errors?.required && userName.touched" 
-            class="alert alert-danger">Name is required!
+         <input type="text" class="form-control" [(ngModel)]="user.name" name="name" #userName="ngModel" minlength="2" required>
+         <div *ngIf="userName.errors?.required && userName.touched" class="alert alert-danger">Name is required!
          </div>
-         <div *ngIf="userName.errors?.minlength && userName.touched" 
-            class="alert alert-danger">Name should be at least 2 characters!
+         <div *ngIf="userName.errors?.minlength && userName.touched" class="alert alert-danger">Name should be at least 2 characters!
          </div>
       </div>
       <div class="form-group">
          <label>Email:</label>
-         <input type="text" 
-         class="form-control"
-         [(ngModel)]="user.email"
-         name="emal"
-         #userEmail="ngModel"
-         required
-         >
-         <div *ngIf="userEmail.errors?.required && userEmail.touched" 
-         class="alert alert-danger">Email is required!
+         <input type="text" class="form-control" [(ngModel)]="user.email" name="emal" #userEmail="ngModel" required>
+         <div *ngIf="userEmail.errors?.required && userEmail.touched" class="alert alert-danger">Email is required!
+         </div>
       </div>
-   </div>
-   <div class="form-group">
-      <label>Phone:</label>
-      <input type="text" 
-      class="form-control"
-      [(ngModel)]="user.phone"
-      name="phone"
-      #userPhone="ngModel"
-      minlength="10"
-      >
-      <div *ngIf="userPhone.errors?.minlength && userEmail.touched" 
-      class="alert alert-danger">Enter a valid number!
-   </div>
+      <div class="form-group">
+         <label>Phone:</label>
+         <input type="text" class="form-control" [(ngModel)]="user.phone" name="phone" #userPhone="ngModel" minlength="10">
+         <div *ngIf="userPhone.errors?.minlength && userEmail.touched" class="alert alert-danger">Enter a valid number!
+         </div>
       </div>
       <input type="submit" class="btn btn-success" value="Submit">
    </form>
