--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ body {
    border: 1px solid #f0f;
 }
 
+.hover {
+   cursor: pointer
+}
+
 // page loader
 $animationLength: 1.5s;
 $animationRadius: 12px;
