--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -4,18 +4,32 @@
 
    <div class="row">
       <div class="form-group col">
-         <form novalidate #form="ngForm" (ngSubmit)="onSubmit(form)">
+         <form novalidate
+               #form="ngForm"
+               (ngSubmit)="onSubmit(form)">
             <label>Todo List:</label>
-            <input type="text" class="form-control" name="todo" [(ngModel)]="todo" #todoItem="ngModel" minlength="3" required>
-            <p *ngIf="todoItem.errors?.minlength && todoItem.touched" class="text-danger">Todo too short!
+            <input type="text"
+                   class="form-control"
+                   name="todo"
+                   [(ngModel)]="todo"
+                   #todoItem="ngModel"
+                   minlength="3"
+                   required>
+            <p *ngIf="todoItem.errors?.minlength && todoItem.touched"
+               class="text-danger">Todo too short!
             </p>
-            <input type="submit" value="Add!" class="btn btn-success mb-0" [class.disabled]="todoItem.errors?.minlength || todoItem.errors?.required">
+            <input type="submit"
+                   value="Add!"
+                   class="btn btn-success mb-0"
+                   [class.disabled]="todoItem.errors?.minlength || todoItem.errors?.required">
          </form>
       </div>
       <ul class="list-group col">
-         <li class="list-group-item" *ngFor="let todo of todos; let i = index">
+         <li class="list-group-item"
+             *ngFor="let todo of todos; let i = index">
             {{ todo }}
-            <span (click)="onDeleteItem(i)" class="typcn typcn-trash red float-right"></span>
+            <span (click)="onDeleteItem(i)"
+                  class="typcn typcn-trash red float-right"></span>
          </li>
       </ul>
    </div>
@@ -26,9 +40,11 @@
       <li *ngFor="let course of courses">{{ course }}</li>
    </ul>
 
-   <img src="{{ imageUrl }}" alt="">
+   <img src="{{ imageUrl }}"
+        alt="">
    <hr>
-   <img [src]="imageUrl" alt="">
+   <img [src]="imageUrl"
+        alt="">
    <p [textContent]="iAm"></p>
    <p>{{ iAm }}</p>
 
@@ -45,11 +61,13 @@
    </table>
    <hr>
    <p>class binding</p>
-   <button class="btn btn-info" [class.disabled]="isDisabled">hit me</button>
+   <button class="btn btn-info"
+           [class.disabled]="isDisabled">hit me</button>
    <hr>
 
    <p>style binding</p>
-   <button class="btn btn-info" [style.color]="isActive ? 'white' : 'seagreen'">hit me</button>
+   <button class="btn btn-info"
+           [style.color]="isActive ? 'white' : 'seagreen'">hit me</button>
    <hr>
    <span>event binding and event bubbling (stopPropagation)</span>
    <div (click)="divClicked()">
@@ -60,9 +78,11 @@
    <input (keyup.enter)="onKeyUp()">
    <hr>
    <p>Template variable (#email)</p>
-   <input [value]="email" (keyup.enter)="email = $event.target.value; onSubmitEmail()">
+   <input [value]="email"
+          (keyup.enter)="email = $event.target.value; onSubmitEmail()">
    <p>Two-way binding (ngModel)</p>
-   <input [(ngModel)]="email" (keyup.enter)="onSubmitEmail()">
+   <input [(ngModel)]="email"
+          (keyup.enter)="onSubmitEmail()">
    <hr>
    <p>Pipe</p>
    <p>
@@ -85,28 +105,78 @@
    {{ aLongText | summary:393 }}
    <hr>
    <h3>Form with validation</h3>
-   <form novalidate #f="ngForm" (ngSubmit)="onSubmitForm(f)">
+   <form novalidate
+         #f="ngForm"
+         (ngSubmit)="onSubmitForm(f)">
       <div class="form-group">
          <label>Name:</label>
-         <input type="text" class="form-control" [(ngModel)]="user.name" name="name" #userName="ngModel" minlength="2" required>
-         <div *ngIf="userName.errors?.required && userName.touched" class="alert alert-danger">Name is required!
+         <input type="text"
+                class="form-control"
+                [(ngModel)]="user.name"
+                name="name"
+                #userName="ngModel"
+                minlength="2"
+                required>
+         <div *ngIf="userName.errors?.required && userName.touched"
+              class="alert alert-danger">Name is required!
          </div>
-         <div *ngIf="userName.errors?.minlength && userName.touched" class="alert alert-danger">Name should be at least 2 characters!
+         <div *ngIf="userName.errors?.minlength && userName.touched"
+              class="alert alert-danger">Name should be at least 2 characters!
          </div>
       </div>
       <div class="form-group">
          <label>Email:</label>
-         <input type="text" class="form-control" [(ngModel)]="user.email" name="emal" #userEmail="ngModel" required>
-         <div *ngIf="userEmail.errors?.required && userEmail.touched" class="alert alert-danger">Email is required!
+         <input type="text"
+                class="form-control"
+                [(ngModel)]="user.email"
+                name="emal"
+                #userEmail="ngModel"
+                required>
+         <div *ngIf="userEmail.errors?.required && userEmail.touched"
+              class="alert alert-danger">Email is required!
          </div>
       </div>
       <div class="form-group">
          <label>Phone:</label>
-         <input type="text" class="form-control" [(ngModel)]="user.phone" name="phone" #userPhone="ngModel" minlength="10">
-         <div *ngIf="userPhone.errors?.minlength && userEmail.touched" class="alert alert-danger">Enter a valid number!
+         <input type="text"
+                class="form-control"
+                [(ngModel)]="user.phone"
+                name="phone"
+                #userPhone="ngModel"
+                minlength="10">
+         <div *ngIf="userPhone.errors?.minlength && userEmail.touched"
+              class="alert alert-danger">Enter a valid number!
          </div>
       </div>
-      <input type="submit" class="btn btn-success" value="Submit">
+      <input type="submit"
+             class="btn btn-success"
+             value="Submit">
    </form>
 
-</div>
+
+   <h3>ng-template with ngSwitch</h3>
+   <input type="radio"
+          name="direction"
+          (click)="myDir='east'">East
+   <input type="radio"
+          name="direction"
+          (click)="myDir='west'">West
+   <input type="radio"
+          name="direction"
+          (click)="myDir='north'">North
+   <input type="radio"
+          name="direction"
+          (click)="myDir='south'">South
+   <br/>
+   <br/>
+   <div [ngSwitch]="myDir">
+      <ng-template [ngSwitchCase]="'east'"> Go to
+         <b>East</b> Direction </ng-template>
+      <ng-template [ngSwitchCase]="'west'"> Go to
+         <b>West</b> Direction </ng-template>
+      <ng-template [ngSwitchCase]="'north'"> Go to
+         <b>North</b> Direction </ng-template>
+      <ng-template [ngSwitchCase]="'south'">Go to
+         <b>South</b> Direction </ng-template>
+      <ng-template ngSwitchDefault> No Direction </ng-template>
+   </div>
