--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -1,4 +1,5 @@
+favourite
 <i class="typcn hover"
    [ngClass]="{'typcn-heart-full-outline': isFavourite, 'typcn-heart-outline': !isFavourite}"
-   style="font-size: 4rem;"
+   style="font-size: 2rem;"
    (click)="onClick()"></i>
