--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -1,8 +1,39 @@
-<hr>
-favourite
+<hr> favourite
 <i class="typcn hover"
    [ngClass]="{'typcn-heart-full-outline': isFavourite, 'typcn-heart-outline': !isFavourite}"
    style="font-size: 2rem;"
    (click)="onClick()"></i>
 <hr>
-   
+
+<h2>I'm from Favourites component</h2>
+<form (submit)="onSubmit()">
+   <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control" [(ngModel)]="user.name" name="name">
+   </div>
+   <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" [(ngModel)]="user.email" name="email">
+   </div>
+   <div class="form-group">
+      <label>Phone</label>
+      <input type="text" class="form-control" [(ngModel)]="user.phone" name="phone">
+   </div>
+   <input type="submit" class="btn btn-success" value="Submit">
+</form>
+<div *ngFor="let user of users">
+   <div class="well">
+      <ul class="list-group">
+         <li class="list-group-item">
+            Name: {{ user.name }}
+         </li>
+         <li class="list-group-item">
+            Email: {{ user.email }}
+         </li>
+         <li class="list-group-item">
+            Phone: {{ user.phone }}
+         </li>
+      </ul>
+      <br>
+   </div>
+</div>
