--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -9,18 +9,30 @@
 <form (submit)="onSubmit()">
    <div class="form-group">
       <label>Name</label>
-      <input type="text" class="form-control" [(ngModel)]="user.name" name="name">
+      <input type="text"
+             class="form-control"
+             [(ngModel)]="user.name"
+             name="name">
    </div>
    <div class="form-group">
       <label>Email</label>
-      <input type="text" class="form-control" [(ngModel)]="user.email" name="email">
+      <input type="text"
+             class="form-control"
+             [(ngModel)]="user.email"
+             name="email">
    </div>
    <div class="form-group">
       <label>Phone</label>
-      <input type="text" class="form-control" [(ngModel)]="user.phone" name="phone">
+      <input type="text"
+             class="form-control"
+             [(ngModel)]="user.phone"
+             name="phone">
    </div>
-   <input type="submit" class="btn btn-success" value="Submit">
+   <input type="submit"
+          class="btn btn-success"
+          value="Submit">
 </form>
+<hr>
 <div *ngFor="let user of users">
    <div class="well">
       <ul class="list-group">
@@ -34,6 +46,8 @@
             Phone: {{ user.phone }}
          </li>
       </ul>
+      <button (click)="onDelete(user.id)" class="btn btn-danger btn-sm">Delete</button>
+      <br>
       <br>
    </div>
 </div>
