--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -6,7 +6,7 @@
 <hr>
 
 <h2>I'm from Favourites component</h2>
-<form (submit)="onSubmit()">
+<form (submit)="onSubmit(isEdit)">
    <div class="form-group">
       <label>Name</label>
       <input type="text"
@@ -46,6 +46,7 @@
             Phone: {{ user.phone }}
          </li>
       </ul>
+      <button (click)="onEdit(user)" class="btn btn-dark btn-sm">Edit</button>
       <button (click)="onDelete(user.id)" class="btn btn-danger btn-sm">Delete</button>
       <br>
       <br>
