--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-courses></app-courses>
 <app-favourites [isFavourite]="post.isFavourite"></app-favourites>
 <contact-form></contact-form>
+<signup-form></signup-form>
