--- a/src/app/components/signup-form/signup-form/signup-form.component.html
+++ b/src/app/components/signup-form/signup-form/signup-form.component.html
@@ -1,17 +1,35 @@
-<form>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input 
-            id="username" 
-            type="text" 
-            class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            id="password" 
-            type="text" 
-            class="form-control">
-    </div>
-    <button class="btn btn-primary" type="submit">Sign Up</button>
+<form [formGroup]="form"
+      (ngSubmit)="login()">
+   <div class="alert alert-danger"
+        *ngIf="form.errors">
+      The username or password is invalid.
+   </div>
+   <div formGroupName="account">
+
+      <div class="form-group">
+         <label for="username">Username</label>
+         <input formControlName="username"
+                id="username"
+                type="text"
+                class="form-control">
+         <div *ngIf="username.pending">Checking for uniqueness... </div>
+         <div *ngIf="username.touched && username.invalid"
+              class="alert alert-danger">
+            <div *ngIf="username.errors?.required">Username is required.</div>
+            <div *ngIf="username.errors?.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
+            <div *ngIf="username.errors?.cannotContainSpace">Username cannot contain space.</div>
+            <div *ngIf="username.errors?.shouldBeUnique">Username is already taken.</div>
+         </div>
+
+      </div>
+      <div class="form-group">
+         <label for="password">Password</label>
+         <input formControlName="password"
+                id="password"
+                type="text"
+                class="form-control">
+      </div>
+   </div>
+   <button class="btn btn-primary"
+           type="submit">Sign Up</button>
 </form>
